@@ -1,26 +1,24 @@
 package me.hapyl.fight.game.heroes.archive.witcher;
 
-import me.hapyl.fight.event.io.DamageInput;
-import me.hapyl.fight.event.io.DamageOutput;
+import me.hapyl.fight.event.DamageInstance;
 import me.hapyl.fight.game.PlayerElement;
 import me.hapyl.fight.game.attribute.AttributeType;
+import me.hapyl.fight.game.attribute.EntityAttributes;
 import me.hapyl.fight.game.attribute.temper.Temper;
 import me.hapyl.fight.game.entity.GamePlayer;
 import me.hapyl.fight.game.entity.LivingGameEntity;
-import me.hapyl.fight.game.heroes.Archetype;
-import me.hapyl.fight.game.heroes.ComplexHero;
-import me.hapyl.fight.game.heroes.Hero;
-import me.hapyl.fight.game.heroes.UltimateCallback;
+import me.hapyl.fight.game.heroes.*;
 import me.hapyl.fight.game.heroes.equipment.Equipment;
-import me.hapyl.fight.game.talents.archive.techie.Talent;
 import me.hapyl.fight.game.talents.Talents;
 import me.hapyl.fight.game.talents.UltimateTalent;
+import me.hapyl.fight.game.talents.archive.techie.Talent;
 import me.hapyl.fight.game.talents.archive.witcher.Irden;
 import me.hapyl.fight.game.talents.archive.witcher.Kven;
-import me.hapyl.fight.game.task.GameTask;
+import me.hapyl.fight.game.task.player.PlayerTimedGameTask;
 import me.hapyl.fight.game.ui.UIComponent;
 import me.hapyl.fight.game.weapons.Weapon;
 import me.hapyl.fight.util.collection.player.PlayerMap;
+import me.hapyl.fight.util.displayfield.DisplayField;
 import org.bukkit.Material;
 import org.bukkit.Sound;
 
@@ -30,8 +28,10 @@ public class WitcherClass extends Hero implements ComplexHero, UIComponent, Play
 
     private final PlayerMap<Combo> combos = PlayerMap.newMap();
 
-    public WitcherClass() {
-        super("The Witcher");
+    @DisplayField private final double defenseIncrease = 2.0d;
+
+    public WitcherClass(@Nonnull Heroes handle) {
+        super(handle, "The Witcher");
 
         setArchetype(Archetype.DAMAGE);
 
@@ -43,37 +43,48 @@ public class WitcherClass extends Hero implements ComplexHero, UIComponent, Play
         equipment.setLeggings(60, 66, 69);
         equipment.setBoots(29, 29, 33);
 
-        setWeapon(new Weapon(Material.IRON_SWORD).setName("Aerondight").setDamage(5.0d));
+        setWeapon(
+                new Weapon(Material.IRON_SWORD)
+                        .setName("Aerondight")
+                        .setDescription("""
+                                Light, sharp as a razor, and fits the hand neatly.
+                                """)
+                        .setDamage(5.0d));
 
         setUltimate(
                 new UltimateTalent(
-                        "All the Trainings",
-                        String.format(
-                                "Remember all your trainings and unleash them at once. Creating infinite %1$s shield and %2$s aura that follows you for {duration}.____Both %1$s and %2$s starts their cooldowns.",
-                                Talents.KVEN.getName(),
-                                Talents.IRDEN.getName()
-                        ), 80
-                ).setDuration(200).setItem(Material.DRAGON_BREATH));
+                        this, "All the Trainings", """
+                        Remember all your trainings and unleash them at once.
+                                                
+                        Gaining a %1$s increase and the %2$s aura that follows you for {duration}.
+                        &8;;After the duration ends, %3$s and %2$s start their cooldown.
+                        """.formatted(AttributeType.DEFENSE, Talents.IRDEN.getName(), Talents.KVEN.getName()), 80
+                ).setType(Talent.Type.ENHANCE)
+                        .setItem(Material.DRAGON_BREATH)
+                        .setDurationSec(10));
     }
 
     @Override
     public UltimateCallback useUltimate(@Nonnull GamePlayer player) {
-        Talents.KVEN.startCd(player);
-        Talents.IRDEN.startCd(player);
+        final EntityAttributes attributes = player.getAttributes();
+        final Kven kven = Talents.KVEN.getTalent(Kven.class);
+        final Irden irden = Talents.IRDEN.getTalent(Irden.class);
 
-        player.getAttributes().increaseTemporary(Temper.WITCHER, AttributeType.DEFENSE, 1.0d, getUltimateDuration());
+        kven.startCd(player, 10000);
+        irden.startCd(player, 10000);
 
-        new GameTask() {
-            private int tick = getUltimateDuration();
+        attributes.increaseTemporary(Temper.WITCHER, AttributeType.DEFENSE, defenseIncrease, getUltimateDuration());
+
+        new PlayerTimedGameTask(player, Heroes.WITCHER, getUltimate()) {
+            @Override
+            public void run(int tick) {
+                irden.affect(player, player.getLocation(), tick);
+            }
 
             @Override
-            public void run() {
-                if (tick-- < 0) {
-                    this.cancel();
-                    return;
-                }
-
-                ((Irden) Talents.IRDEN.getTalent()).affect(player, player.getLocation(), tick);
+            public void onLastTick() {
+                kven.startCd(player);
+                irden.startCd(player);
             }
         }.runTaskTimer(0, 1);
 
@@ -95,16 +106,15 @@ public class WitcherClass extends Hero implements ComplexHero, UIComponent, Play
     }
 
     @Override
-    public DamageOutput processDamageAsDamager(DamageInput input) {
-        final GamePlayer player = input.getDamagerAsPlayer();
-        final LivingGameEntity entity = input.getEntity();
+    public void processDamageAsDamager(@Nonnull DamageInstance instance) {
+        final GamePlayer player = instance.getDamagerAsPlayer();
+        final LivingGameEntity entity = instance.getEntity();
 
         if (player == null) {
-            return null;
+            return;
         }
 
         final Combo combo = getCombo(player);
-        double damage = input.getDamage();
 
         if (combo.getEntity() == null && entity != player) {
             combo.setEntity(entity.getEntity());
@@ -119,34 +129,33 @@ public class WitcherClass extends Hero implements ComplexHero, UIComponent, Play
         }
         else {
             combo.reset();
-            return null;
+            return;
         }
 
         final int comboHits = combo.getCombo();
 
         // combo starts at 2 hits
         if (comboHits > 2) {
-            damage = Math.max(damage, damage * (1 + (comboHits - 2) * 0.1d));
+            final double damageMultiplier = (1 + (comboHits - 2) * 0.1d);
 
             // Fx
             player.sendTitle("    &6&lCOMBO!", "     &4&lx" + (comboHits - 2), 0, 25, 25);
             player.playSound(Sound.ITEM_SHIELD_BREAK, 1.75f);
-        }
 
-        return new DamageOutput(damage);
+            instance.multiplyDamage(damageMultiplier);
+        }
     }
 
     @Override
-    public DamageOutput processDamageAsVictim(DamageInput input) {
+    public void processDamageAsVictim(@Nonnull DamageInstance instance) {
         final Kven kven = getThirdTalent();
-        final GamePlayer player = input.getEntityAsPlayer();
+        final GamePlayer player = instance.getEntityAsPlayer();
 
         if (kven.getShieldCharge(player) > 0) {
             kven.removeShieldCharge(player);
 
-            return DamageOutput.CANCEL;
+            instance.setCancelled(true);
         }
-        return null;
     }
 
     @Override
